--- a/signup.html
+++ b/signup.html
@@ -15,7 +15,7 @@
 }
 body {
     min-height: 100%;
-    background-color: #ffffff;
+    background-color: #FFC0CB;
 }
 h1 {
     letter-spacing: -1px;
