--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
     </div>
     <div id="banner">
-        <img src="https://drive.google.com/file/d/1Xbf0LKlSF6sCsR8Q-3hW5hiOR2lU3kJh/view?usp=sharing" id="banner-image" alt="Sport Image" >
+        <img src="cover1" id="banner-image" alt="Sport Image" >
         <div id="welcome-text"><p>Welcome to our Library</p></div>
     </div>
     <div id="menu-container">
